essais avec REST API

--- a/arduino_code/platformio.ini
+++ b/arduino_code/platformio.ini
@@ -15,4 +15,8 @@ framework = arduino
 lib_deps = 
 	arduino-libraries/WiFiNINA@^1.8.13
 	chuckbell/MySQL Connector Arduino@^1.2.0
-    Ethernet@^2.0.0
+	Ethernet@^2.0.0
+	marcoschwartz/aREST@0.0.0-alpha+sha.0e6b782568
+	knolleary/PubSubClient@^2.8
+	256dpi/MQTT@^2.5.0
+	arduino-libraries/ArduinoMqttClient@^0.1.5
